cluster-setup/whoami/whoami-annotated.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami-example
  labels:
    shared-gateway-access: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: whoami-example
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami-example
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: whoami
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: whoami
  namespace: whoami-example
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
spec:
  gatewayClassName: cilium
  listeners:
  - name: http
    hostname: "*.cluster.stevenchen.one"
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - kind: Secret
        name: wildcard-cert
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
  namespace: whoami-example
spec:
  parentRefs:
  - name: whoami
  hostnames:
  - "whoami.cluster.stevenchen.one"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: whoami
      port: 80
